--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@mikro-orm/core": "^6.0.5",
-    "@mikro-orm/nestjs": "^5.2.3",
-    "@mikro-orm/postgresql": "^6.0.5",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.1",
     "@types/handlebars": "^4.1.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.4.0",
@@ -39,13 +37,14 @@
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.8",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
+    "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^6.0.5",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -88,12 +87,5 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
