--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ioredis": "^5.3.2",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
