--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/typeorm": "^10.0.1",
     "@types/handlebars": "^4.1.0",
     "bcrypt": "^5.1.1",
@@ -46,7 +47,10 @@
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
     "typeorm": "^0.3.20",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "wink-embeddings-sg-100d": "^1.1.0",
+    "wink-eng-lite-web-model": "^1.8.0",
+    "wink-nlp": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
